--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -19,10 +19,12 @@ wildcard_imports = "deny"
 [dependencies]
 rinf = "8.0.0"
 serde = { version = "1", features = ["derive"] }
-tokio = { version = "1", features = ["rt", "macros", "time"] }
+tokio = { version = "1", features = [ "macros", "time","rt-multi-thread"] }
 async-trait = "0.1.87"
 messages = "0.3.1"
-
+tonic = "0.13.0"
+prost = "0.13"
+xactor = { version = "0.7.11", default-features = false, features = ["runtime-tokio"] }
 
 [build-dependencies]
 protoc-bin-vendored = "3"
