--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -18,11 +18,13 @@ wildcard_imports = "deny"
 
 [dependencies]
 rinf = "8.0.0"
+anyhow="1.0.98"
 serde = { version = "1", features = ["derive"] }
-tokio = { version = "1", features = [ "macros", "time","rt-multi-thread"] }
+tokio = { version = "1", features = [ "macros", "time","rt-multi-thread","sync"] }
 async-trait = "0.1.87"
 messages = "0.3.1"
 tonic = "0.13.0"
+critical-section = {version="1.2.0",features = ["std"]}
 prost = "0.13"
 xactor = { version = "0.7.11", default-features = false, features = ["runtime-tokio"] }
 
