--- a/native/hub/Cargo.toml
+++ b/native/hub/Cargo.toml
@@ -27,6 +27,9 @@ tonic = "0.13.0"
 critical-section = {version="1.2.0",features = ["std"]}
 prost = "0.13"
 xactor = { version = "0.7.11", default-features = false, features = ["runtime-tokio"] }
+dashmap="6.1.0"
+chrono = "0.4"
+
 
 [build-dependencies]
 protoc-bin-vendored = "3"
